tests/ui/target-feature/forbidden-target-feature-attribute.stderr
error: target feature `soft-float` cannot be enabled with `#[target_feature]`: unsound because it changes float ABI
  --> $DIR/forbidden-target-feature-attribute.rs:9:18
   |
LL | #[target_feature(enable = "soft-float")]
   |                  ^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

